# VkWebGPU-ICD

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  Req.txt  SAUERBRATEN_PLAN.md  SAUERBRATEN_SETUP.md  SAUERBRATEN_TEST.md  SESSION_SUMMARY.md  STATUS.md  STATUS_SAUERBRATEN.md  TESTING.md  launch_sauerbraten_webgpu.ps1  run_test.bat  run_test.ps1  run_test_capture.ps1  test_icd.bat  test_icd.sh  test_quick.ps1  test_sauerbraten.ps1  test_sauerbraten_debug.ps1  test_sauerbraten_quick.ps1  test_vulkaninfo.ps1  vkwebgpu_icd.json  vkwebgpu_icd_linux.json  vkwebgpu_icd_macos.json
test_app/: Cargo.toml  README.md  build.bat  build.rs  run_test.bat  run_test.ps1  run_test2.bat  run_test_clean.ps1
test_app/src/: main.rs
vkwebgpu/: Cargo.toml
vkwebgpu/src/: backend.rs  buffer.rs  command_buffer.rs  command_pool.rs  descriptor.rs  device.rs  error.rs  format.rs  framebuffer.rs  handle.rs  icd.rs  image.rs  instance.rs  lib.rs  memory.rs  pipeline.rs  push_constants.rs  query.rs  queue.rs  render_pass.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  webx_ipc.rs  webx_serialize.rs
